// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<DeferredSpinner
  loading={false}
  timeout={100}
>
  <div
    className="big-padded"
  >
    <div
      className="big-spacer-bottom"
    >
      <h1>
        '3' is a magic number.
      </h1>
      <div
        className="text-muted"
      >
        <span>
          hotspot.category
        </span>
        <span
          className="little-spacer-left"
        >
          SQL injection
        </span>
      </div>
    </div>
    <div
      className="huge-spacer-bottom"
    >
      <span>
        hotspot.status
      </span>
      <span
        className="badge little-spacer-left"
      >
        issue.status.RESOLVED
      </span>
      <span
        className="huge-spacer-left"
      >
        hotspot.assigned_to
      </span>
      <strong
        className="little-spacer-left"
      >
        John Doe
      </strong>
    </div>
    <HotspotViewerTabs
      hotspot={
        Object {
          "assignee": Object {
            "active": true,
            "local": true,
            "login": "john.doe",
            "name": "John Doe",
          },
          "author": Object {
            "active": true,
            "local": true,
            "login": "john.doe",
            "name": "John Doe",
          },
          "component": Object {
            "breadcrumbs": Array [],
            "key": "my-project",
            "name": "MyProject",
            "organization": "foo",
            "qualifier": "FIL",
            "qualityGate": Object {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": Array [
              Object {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": Array [],
          },
          "creationDate": "2013-05-13T17:55:41+0200",
          "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
          "line": 142,
          "message": "'3' is a magic number.",
          "project": Object {
            "breadcrumbs": Array [],
            "key": "my-project",
            "name": "MyProject",
            "organization": "foo",
            "qualifier": "TRK",
            "qualityGate": Object {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": Array [
              Object {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": Array [],
          },
          "resolution": "FALSE-POSITIVE",
          "rule": Object {
            "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
            "key": "squid:S2077",
            "name": "That rule",
            "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
            "securityCategory": "sql-injection",
            "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
            "vulnerabilityProbability": "HIGH",
          },
          "status": "RESOLVED",
          "textRange": Object {
            "endLine": 142,
            "endOffset": 83,
            "startLine": 142,
            "startOffset": 26,
          },
          "updateDate": "2013-05-13T17:55:42+0200",
        }
      }
    />
  </div>
</DeferredSpinner>
`;

exports[`should render correctly: deleted assignee 1`] = `
<DeferredSpinner
  loading={false}
  timeout={100}
>
  <div
    className="big-padded"
  >
    <div
      className="big-spacer-bottom"
    >
      <h1>
        '3' is a magic number.
      </h1>
      <div
        className="text-muted"
      >
        <span>
          hotspot.category
        </span>
        <span
          className="little-spacer-left"
        >
          SQL injection
        </span>
      </div>
    </div>
    <div
      className="huge-spacer-bottom"
    >
      <span>
        hotspot.status
      </span>
      <span
        className="badge little-spacer-left"
      >
        issue.status.RESOLVED
      </span>
      <span
        className="huge-spacer-left"
      >
        hotspot.assigned_to
      </span>
      <strong
        className="little-spacer-left"
      >
        user.x_deleted.John Doe
      </strong>
    </div>
    <HotspotViewerTabs
      hotspot={
        Object {
          "assignee": Object {
            "active": false,
            "local": true,
            "login": "john.doe",
            "name": "John Doe",
          },
          "author": Object {
            "active": true,
            "local": true,
            "login": "john.doe",
            "name": "John Doe",
          },
          "component": Object {
            "breadcrumbs": Array [],
            "key": "my-project",
            "name": "MyProject",
            "organization": "foo",
            "qualifier": "FIL",
            "qualityGate": Object {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": Array [
              Object {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": Array [],
          },
          "creationDate": "2013-05-13T17:55:41+0200",
          "key": "01fc972e-2a3c-433e-bcae-0bd7f88f5123",
          "line": 142,
          "message": "'3' is a magic number.",
          "project": Object {
            "breadcrumbs": Array [],
            "key": "my-project",
            "name": "MyProject",
            "organization": "foo",
            "qualifier": "TRK",
            "qualityGate": Object {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": Array [
              Object {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": Array [],
          },
          "resolution": "FALSE-POSITIVE",
          "rule": Object {
            "fixRecommendations": "<p>This a <strong>strong</strong> message about fixing !</p>",
            "key": "squid:S2077",
            "name": "That rule",
            "riskDescription": "<p>This a <strong>strong</strong> message about risk !</p>",
            "securityCategory": "sql-injection",
            "vulnerabilityDescription": "<p>This a <strong>strong</strong> message about vulnerability !</p>",
            "vulnerabilityProbability": "HIGH",
          },
          "status": "RESOLVED",
          "textRange": Object {
            "endLine": 142,
            "endOffset": 83,
            "startLine": 142,
            "startOffset": 26,
          },
          "updateDate": "2013-05-13T17:55:42+0200",
        }
      }
    />
  </div>
</DeferredSpinner>
`;

exports[`should render correctly: no hotspot 1`] = `
<DeferredSpinner
  loading={false}
  timeout={100}
/>
`;
